# forge-gpu

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
assets/models/space-shuttle/: space-shuttle.mtl
assets/processed/41-scene-model-loading/CesiumMilkTruck/: CesiumMilkTruck.fmesh  CesiumMilkTruck.meta.json
assets/processed/41-scene-model-loading/Duck/: Duck.fmesh  DuckCM.meta.json
assets/processed/41-scene-model-loading/Suzanne/: Suzanne.fmesh  Suzanne_BaseColor.meta.json  Suzanne_MetallicRoughness.meta.json
assets/processed/42-pipeline-texture-compression/ABeautifulGame/: Bishop_black_ORM.meta.json  Bishop_black_base_color.meta.json  Bishop_black_normal.meta.json  Bishop_white_ORM.meta.json  Bishop_white_base_color.meta.json  Bishop_white_normal.meta.json  Castle_ORM.meta.json  Castle_black_base_color.meta.json  Castle_normal.meta.json  Castle_white_base_color.meta.json  Chessboard_ORM.meta.json  Chessboard_base_color.meta.json  King_black_ORM.meta.json  (+20 more)
cmake/: ForgeGpuSources.cmake
shaders/source/11-compute-shaders/: plasma.comp.hlsl
shaders/source/14-environment-mapping/: shuttle.frag.hlsl
shaders/source/15-cascaded-shadow-maps/: debug_quad.frag.hlsl  grid.frag.hlsl  scene.frag.hlsl
shaders/source/21-hdr-tone-mapping/: grid.frag.hlsl  scene.frag.hlsl
shaders/source/22-bloom/: grid.frag.hlsl
shaders/source/24-gobo-spotlight/: grid.frag.hlsl  scene.frag.hlsl
shaders/source/27-ssao/: blur.frag.hlsl  grid.frag.hlsl  scene.frag.hlsl  ssao.frag.hlsl
shaders/source/29-screen-space-reflections/: composite.frag.hlsl  grid.frag.hlsl  scene.frag.hlsl  scene.vert.hlsl  ssr.frag.hlsl
shaders/source/30-planar-reflections/: scene.frag.hlsl
shaders/source/31-transform-animations/: scene.frag.hlsl
shaders/source/32-skinning-animations/: grid.frag.hlsl  skin.frag.hlsl
shaders/source/33-vertex-pulling/: grid.frag.hlsl  grid.vert.hlsl  pulled.frag.hlsl  pulled.vert.hlsl  shadow.frag.hlsl  shadow_pulled.vert.hlsl
shaders/source/34-stencil-testing/: grid.frag.hlsl  scene.frag.hlsl
shaders/source/35-decals/: decal.frag.hlsl  grid.frag.hlsl  scene.frag.hlsl
shaders/source/36-edge-detection/: edge_detect.frag.hlsl  ghost.frag.hlsl  grid.frag.hlsl  scene.frag.hlsl
shaders/source/37-3d-picking/: grid.frag.hlsl  scene.frag.hlsl  shadow.frag.hlsl
shaders/source/38-indirect-drawing/: truck_scene.frag.hlsl
shaders/source/39-pipeline-processed-assets/: scene_pipeline.frag.hlsl  scene_raw.frag.hlsl
shaders/source/40-scene-renderer/: scene.frag.hlsl
shaders/source/46-particle-animations/: particle.frag.hlsl  particle.vert.hlsl  particle_sim.comp.hlsl
shaders/source/49-imposters/: imposter.frag.hlsl  imposter.vert.hlsl  imposter_bake.frag.hlsl  imposter_bake.vert.hlsl
shaders/source/50-grass-rendering/: grass.frag.hlsl  grass.vert.hlsl  grass_shadow.vert.hlsl  terrain_lod.vert.hlsl  terrain_lod_shadow.vert.hlsl
shaders/source/51-pbr-shading/: pbr.frag.hlsl
shaders/source/52-pbr-textures/: pbr_textures.frag.hlsl
shaders/source/shared-scene/: grid.frag.hlsl  scene_model.frag.hlsl  scene_morph.vert.hlsl  scene_morph_shadow.vert.hlsl  scene_skinned.vert.hlsl  scene_skinned_shadow.vert.hlsl  scene_textured.frag.hlsl  scene_textured.vert.hlsl  shadow.frag.hlsl  terrain.frag.hlsl  terrain.vert.hlsl  terrain_no_variation.frag.hlsl  terrain_shadow.vert.hlsl  tree_instanced_colored.frag.hlsl  tree_instanced_colored.vert.hlsl  tree_instanced_shadow.vert.hlsl
src/: browser_status.h  forge_gpu_animation.cpp  forge_gpu_assets.cpp  forge_gpu_assets.h  forge_gpu_browser_status.cpp  forge_gpu_browser_status.h  forge_gpu_camera.cpp  forge_gpu_camera.h  forge_gpu_deferred_scene.cpp  forge_gpu_deferred_scene.h  forge_gpu_demo.cpp  forge_gpu_emscripten_post.js  forge_gpu_forward_scene.cpp  forge_gpu_forward_scene.h  forge_gpu_gpu_helpers.cpp  forge_gpu_gpu_helpers.h  forge_gpu_imgui.cpp  forge_gpu_imgui.h  forge_gpu_internal.h  forge_gpu_lesson_28_ui.c  forge_gpu_lesson_28_ui.h  forge_gpu_lesson_common.cpp  forge_gpu_lesson_common.h  forge_gpu_lessons.cpp  forge_gpu_lessons.h  forge_gpu_math.h  forge_gpu_pipelines.cpp  forge_gpu_pipelines.h  forge_gpu_processed_assets.cpp  forge_gpu_processed_assets.h  forge_gpu_processed_scene_renderer.cpp  forge_gpu_processed_scene_renderer.h  forge_gpu_scene.cpp  forge_gpu_scene.h  forge_gpu_shapes.c  forge_gpu_shapes.h  forge_gpu_web_shell.html
src/lessons/: forge_gpu_lesson_01_hello_window.cpp  forge_gpu_lesson_02_first_triangle.cpp  forge_gpu_lesson_03_uniforms_and_motion.cpp  forge_gpu_lesson_04_textures_and_samplers.cpp  forge_gpu_lesson_05_mipmaps.cpp  forge_gpu_lesson_06_depth_and_3d.cpp  forge_gpu_lesson_07_camera_and_input.cpp  forge_gpu_lesson_08_mesh_loading.cpp  forge_gpu_lesson_09_scene_loading.cpp  forge_gpu_lesson_10_basic_lighting.cpp  forge_gpu_lesson_11_compute_shaders.cpp  forge_gpu_lesson_12_shader_grid.cpp  forge_gpu_lesson_13_instanced_rendering.cpp  forge_gpu_lesson_14_environment_mapping.cpp  forge_gpu_lesson_15_cascaded_shadow_maps.cpp  forge_gpu_lesson_16_blending.cpp  forge_gpu_lesson_17_normal_maps.cpp  forge_gpu_lesson_18_blinn_phong_materials.cpp  forge_gpu_lesson_19_debug_lines.cpp  forge_gpu_lesson_20_linear_fog.cpp  forge_gpu_lesson_21_hdr_tone_mapping.cpp  forge_gpu_lesson_22_bloom.cpp  forge_gpu_lesson_23_point_light_shadows.cpp  forge_gpu_lesson_24_gobo_spotlight.cpp  forge_gpu_lesson_25_shader_noise.cpp  forge_gpu_lesson_26_procedural_sky.cpp  forge_gpu_lesson_27_ssao.cpp  forge_gpu_lesson_28_ui_rendering.cpp  forge_gpu_lesson_29_screen_space_reflections.cpp  forge_gpu_lesson_30_planar_reflections.cpp  forge_gpu_lesson_31_transform_animations.cpp  forge_gpu_lesson_32_skinning_animations.cpp  forge_gpu_lesson_33_vertex_pulling.cpp  forge_gpu_lesson_34_stencil_testing.cpp  forge_gpu_lesson_35_decals.cpp  forge_gpu_lesson_36_edge_detection.cpp  forge_gpu_lesson_37_3d_picking.cpp  forge_gpu_lesson_38_indirect_drawing.cpp  forge_gpu_lesson_39_pipeline_processed_assets.cpp  forge_gpu_lesson_40_scene_renderer.cpp  (+12 more)
tools/: generate-shader-header.py  package-web-itch.py
(+42 files in other folders)
